# create-python-project

./: Cargo.toml  README.md
src/: main.rs
