[package]
name = "create-python-project"
version = "0.2.1"
edition = "2021"
description = "Create a Python project automatically with rust (like create-react-app but for python)"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
